<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_accuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin"
            android:text="@string/precision"
            android:textAlignment="center"
            android:textSize="@dimen/h2" />

        <TextView
            android:id="@+id/txt_bearing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1"
            android:text="@string/cap"
            android:textAlignment="center"
            android:textSize="@dimen/h2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.10"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/txt_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="0.5"
            android:gravity="center"
            android:maxLength="10"
            android:textColor="@color/textColor"
            android:textSize="@dimen/h2" />

        <TextView
            android:id="@+id/txt_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="0.5"
            android:gravity="center"
            android:maxLength="10"
            android:textColor="@color/textColor"
            android:textSize="@dimen/h2" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.50"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/radio_hlp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:maxLines="1"
            android:gravity="start"
            android:padding="@dimen/padding_radio"
            android:text="@string/haut_le_pieds"
            android:textSize="@dimen/h2" />

        <RadioButton
            android:id="@+id/radio_ulat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="start"
            android:padding="@dimen/padding_radio"
            android:text="@string/uni_lateral_droit"
            android:textSize="@dimen/h2" />

        <RadioButton
            android:id="@+id/radio_biLat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:padding="@dimen/padding_radio"
            android:layout_weight="1"
            android:text="@string/bi_lateral"
            android:textSize="@dimen/h2" />

        <RadioButton
            android:id="@+id/radio_m_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="start"
            android:padding="@dimen/padding_radio"
            android:text="@string/marche_arriere"
            android:textSize="@dimen/h2" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.33"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_plot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/h2" />

        <TextView
            android:id="@+id/txt_satus_gps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/init_status_gps"
            android:textAlignment="center"
            android:textSize="@dimen/h2" />

        <Button
            android:id="@+id/btn_point_noir"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@drawable/custom_button"
            android:elevation="16dp"
            android:text="@string/poi"
            android:textAlignment="center"
            android:textColor="@color/btnPointNoir" />

        <TextView
            android:id="@+id/txt_typeDeCollecte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tirets"
            android:textColor="@color/textColor"
            android:textSize="75sp" />


    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="0.25"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:layout_weight="0.33"
            android:background="@drawable/custom_button"
            android:text="@string/stop"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_rec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:layout_weight="0.33"
            android:background="@drawable/custom_button"
            android:text="@string/record" />

    </LinearLayout>

</LinearLayout>