<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:id="@+id/txt_titre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.1"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/app_name"
            android:textSize="@dimen/h1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hyper_urbain"
                    android:textSize="@dimen/h1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.1"
                android:orientation="horizontal"
                android:padding="@dimen/padding">


                <SeekBar
                    android:id="@+id/sb_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.1"
                    android:animationResolution="@android:integer/status_bar_notification_info_maxnum"
                    android:padding="@dimen/cornerRound"
                    android:progress="7"
                    android:max="15"
                    android:min="5"
                    android:thumb="@drawable/custom_seekbar" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/txt_gps_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:gravity="center"
            android:text="" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin"
            android:layout_weight="0.1"
            android:background="@drawable/custom_button"
            android:elevation="16dp"
            android:foreground="@drawable/custom_button"
            android:gravity="center"
            android:padding="@dimen/padding"
            android:text="@string/demarrer_service"
            tools:layout_editor_absoluteX="23dp"
            tools:layout_editor_absoluteY="-149dp" />

        <Button
            android:id="@+id/btn_fin_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin"
            android:layout_weight="0.1"
            android:background="@drawable/custom_button"
            android:foreground="@drawable/custom_button"
            android:padding="@dimen/padding"
            android:text="@string/recherche_position"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:gravity="center"
            android:text="@string/by_plectre"
            android:textColor="@color/footer" />

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:gravity="center"
            android:text="@string/version"
            android:textColor="@color/footer" />

    </LinearLayout>

</RelativeLayout>
